# smolweb-demo

./: README.md
embassy-demo/: Cargo.toml  rust-toolchain.toml
embassy-demo/src/: index.js  main.rs
tokio-demo/: Cargo.toml
tokio-demo/.cargo/: config.toml
tokio-demo/src/: index.html  index.js  main.rs
