[package]
name = "tokio-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
env_logger = "0.11.3"
log = "0.4.21"
heapless = { version = "0.8.0", features = ["serde"] }
picoserve = { version = "0.11.1", features = ["tokio"] }
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.31.0", features = ["rt", "io-util", "net", "time", "macros"] }
lazy_static ={ version = "1.4.0"}
